--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Your awesome title
+title: CIERA Python Resources
 lang: en
-description: Write an awesome description for your new site here
+description: A Home for CIERA's Highschool and REU Python Tutorials
 
 ## local method ##
 # theme: jekyll-rtd-theme
