--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: CIERA Python Resources
 lang: en
-description: A Home for CIERA's Highschool and REU Python Tutorials
+description: A Home for CIERA's High School and REU Python Tutorials
 
 ## local method ##
 # theme: jekyll-rtd-theme
